<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Helight_ui</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="lable1">活动</string>
    <string name="lable2">快讯</string>
    <string name="lable3">我秀</string>
    <string name="lable4">我</string>
    <string name="lable5">设置</string>
    
    <string name="main_toptitle">热门类型</string>
    <string name="main_peopletitle">活动达人</string>
    <string name="main_hottitle">热门活动</string>

</resources>
