    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   
        android:layout_width="match_parent"  
        android:layout_height="match_parent"  
        android:orientation="vertical" >  
	    <!-- ViewPager的使用必须是完整的名字哦 -->
	    <android.support.v4.view.ViewPager
	        android:id="@+id/viewpager"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"/>
    
        <LinearLayout  
            android:layout_width="match_parent"  
            android:layout_height="60dp"  
            android:background="@drawable/tab_bg" >  
      
            <RelativeLayout  
                android:id="@+id/layout1"  
                android:layout_width="0dp"  
                android:layout_height="match_parent"  
                android:layout_weight="1" >  
      
                <LinearLayout  
                    android:layout_width="match_parent"  
                    android:layout_height="wrap_content"  
                    android:layout_centerVertical="true"  
                    android:orientation="vertical" >  
      
                    <ImageView  
                        android:id="@+id/image1"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:src="@drawable/image1_unselected" />  
      
                    <TextView  
                        android:id="@+id/text1"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:text="@string/lable1"  
                        android:textColor="#82858b" />  
                </LinearLayout>  
            </RelativeLayout>  
            
            <RelativeLayout  
                android:id="@+id/layout2"  
                android:layout_width="0dp"  
                android:layout_height="match_parent"  
                android:layout_weight="1" >  
      
                <LinearLayout  
                    android:layout_width="match_parent"  
                    android:layout_height="wrap_content"  
                    android:layout_centerVertical="true"  
                    android:orientation="vertical" >  
      
                    <ImageView  
                        android:id="@+id/image2"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:src="@drawable/image2_unselected" />  
      
                    <TextView  
                        android:id="@+id/text2"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:text="@string/lable2"  
                        android:textColor="#82858b" />  
                </LinearLayout>  
            </RelativeLayout>  
            <RelativeLayout  
                android:id="@+id/layout3"  
                android:layout_width="0dp"  
                android:layout_height="match_parent"  
                android:layout_weight="1" >  
      
                <LinearLayout  
                    android:layout_width="match_parent"  
                    android:layout_height="wrap_content"  
                    android:layout_centerVertical="true"  
                    android:orientation="vertical" >  
      
                    <ImageView  
                        android:id="@+id/image3"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:src="@drawable/image3_unselected" />  
      
                    <TextView  
                        android:id="@+id/text3"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:text="@string/lable3"  
                        android:textColor="#82858b" />  
                </LinearLayout>  
            </RelativeLayout>  
            
            <RelativeLayout  
                android:id="@+id/layout4"  
                android:layout_width="0dp"  
                android:layout_height="match_parent"  
                android:layout_weight="1" >  
      
                <LinearLayout  
                    android:layout_width="match_parent"  
                    android:layout_height="wrap_content"  
                    android:layout_centerVertical="true"  
                    android:orientation="vertical" >  
      
                    <ImageView  
                        android:id="@+id/image4"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:src="@drawable/image4_unselected" />  
      
                    <TextView  
                        android:id="@+id/text4"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:text="@string/lable4"  
                        android:textColor="#82858b" />  
                </LinearLayout>  
            </RelativeLayout>  

            
            <!--  RelativeLayout  
                android:id="@+id/layout5"  
                android:layout_width="0dp"  
                android:layout_height="match_parent"  
                android:layout_weight="1" >  
      
                <LinearLayout  
                    android:layout_width="match_parent"  
                    android:layout_height="wrap_content"  
                    android:layout_centerVertical="true"  
                    android:orientation="vertical" >  
      
                    <ImageView  
                        android:id="@+id/image5"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:src="@drawable/image5_unselected" />  
      
                    <TextView  
                        android:id="@+id/text5"  
                        android:layout_width="wrap_content"  
                        android:layout_height="wrap_content"  
                        android:layout_gravity="center_horizontal"  
                        android:text="@string/lable5"  
                        android:textColor="#82858b" />  
                </LinearLayout>  
            </RelativeLayout -->  
        </LinearLayout>  
    </LinearLayout>  