<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/Search_city"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/Search_city_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="深圳"
                android:textColor="#FF8C00"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/Search_city_img"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/search_city" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Search_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="300"
            android:background="@drawable/search_input"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="类别 , 地点等..."
                android:textColor="#666666"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="创建活动"
                android:textColor="#666666"
                android:textSize="12sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/MySearchScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/main_toptitle"
                android:textSize="18sp" />


            <LinearLayout
                android:id="@+id/LinearLayout_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal" >

                <LinearLayout
                        android:id="@+id/LinearLayout01"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical" 
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/color_green" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="篮球"
                            android:textColor="#666666"
                            android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Search_pub"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" 
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/color_orange" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="足球"
                        android:textColor="#666666"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Search_chinsesnack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" 
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/color_purple" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="羽毛球"
                        android:textColor="#666666"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Search_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" 
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/color_red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="网球"
                        android:textColor="#666666"
                        android:textSize="16dp" />
                </LinearLayout>

        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/main_peopletitle"
                android:textSize="18sp" />
            <LinearLayout
                android:id="@+id/LinearLayout_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/LinearLayout05"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" 
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="篮球达人-吴明"
                        android:textColor="#666666"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="发起80次篮球活动"
                        android:textColor="#bbb"
                        android:textSize="10dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo_kaixin" />              
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout04"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" 
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="足球小天才"
                        android:textColor="#666666"
                        android:textSize="12dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="足球运动健将"
                        android:textColor="#bbb"
                        android:textSize="10dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo_mingdao" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="羽毛球达人大叔"
                        android:textColor="#666666"
                        android:textSize="12dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="打遍天下无敌手"
                        android:textColor="#bbb"
                        android:textSize="10dp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo_netease" />
                </LinearLayout>
 
                <LinearLayout
                    android:id="@+id/LinearLayout03"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="网球明日之星"
                        android:textColor="#666666"
                        android:textSize="12dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="擅长断球快速攻击"
                        android:textColor="#bbb"
                        android:textSize="10dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo_qq" />                            
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/main_hottitle"
                android:textSize="18sp" />
               <ListView
		        android:id="@+id/hotlistView"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		       </ListView>
        </LinearLayout>
    </ScrollView>



</LinearLayout>